services/product/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-product
  labels:
    app: shopee-product
spec:
  type: ClusterIP
  ports:
    - port: 8087
      targetPort: http
      protocol: TCP
      name: http
    - port: 9097
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: shopee-product
